Added images and changed html header position

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!--create header section-->
         <div class="header">
             <div class="left">
-                <div class="logo">Header</div>
+                <div class="logo">Header Logo</div>
             </div>
             <div class="right">
                 <ul>
@@ -21,45 +21,48 @@
                 </ul>
             </div>
         </div>
-
         <!--Create a website info-->
-        <div class="class_info">
+        <div class="main_txt">
             <div class="title">This website is awesome</div>
             <div class="txt">website information section providing insight</div>
-            <button>sign up</button>
-            <img src="" alt="">
+            <button class="buttons">sign up</button>
+            <img src="building.jpg" alt="">
         </div>
+
 
         <!--Info section-->
         <div class="info">
-            <div class="info-blcok">
+            <div class="info-header">Some infomration</div>
+            <div class="info-block">
                 <div class="item">
-                    <img src="" alt="">
+                    <img src="cyber_rail.jpg" alt="">
                     <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quod, mollitia quaerat, eligendi laudantium recusandae soluta voluptates tenetur minima eius velit libero saepe magnam temporibus illo ratione quia esse qui?</div>
                 </div>
 
                 <div class="item">
-                    <img src="" alt="">
+                    <img src="shop.jpg" alt="">
                     <div class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos voluptas incidunt asperiores in dolorem natus maiores soluta impedit assumenda. Aperiam recusandae nobis praesentium rerum facilis soluta sapiente architecto itaque provident!</div>
                 </div>
 
                 <div class="item">
-                    <img src="" alt="">
+                    <img src="sunset.jpg" alt="">
                     <div class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestias earum minima ratione corrupti cupiditate maiores impedit sit quas minus? Labore nihil fugit iure corrupti possimus laudantium eveniet adipisci nostrum.</div>
                 </div>
 
                 <div class="item">
-                    <img src="" alt="">
+                    <img src="ecumenopolis.jpg" alt="">
                     <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta ipsa sint similique dolorem veniam dolorum accusamus at quisquam illum magnam sunt quod quis voluptate nulla laudantium asperiores, molestias quia nemo!</div>
                 </div>
             </div>
         </div>
         <!--Quote/passage-->
-        <div>
+        <div class="quote-section">
+            <div class="quote">
             Setting up the quote/passage section of the landing page. Seeing if this works properly or if it needs to be a paragraph.
-        </div>
-        <div>
-            - Dude, quoting stuff
+            </div>
+            <div>
+                - Dude, quoting stuff
+            </div>
         </div>
 
         <!--setting up a second sign up button-->
@@ -71,9 +74,12 @@
                 signing up is cool and we have more perks for members.
             </div>
 
-            <button>Sign up</button>
+            <button class="buttons">Sign up</button>
         </div>
 
+        <div class="footer">
+            Copyright @ The Odin Project 2023
+        </div>
 
 
     </body>
